--- a/AndroidClientProject/AndroidClient/src/main/res/layout/activity_music_list.xml
+++ b/AndroidClientProject/AndroidClient/src/main/res/layout/activity_music_list.xml
@@ -3,22 +3,17 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".MusicListActivity"
     tools:ignore="MergeRootFrame">
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal" >
-        <EditText android:id="@+id/edit_message"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="@string/edit_message" />
-        <Button
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/button_send"
-            android:onClick="sendMessage" />
+            android:text="Test"
+            android:id="@+id/textView" />
     </LinearLayout>
 </FrameLayout>
