--- a/AndroidClientProject/AndroidClient/src/main/res/layout/activity_main.xml
+++ b/AndroidClientProject/AndroidClient/src/main/res/layout/activity_main.xml
@@ -5,15 +5,14 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     tools:ignore="MergeRootFrame">
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal" >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Welcome to GTMyMusic!"
+            android:text="@+string/Welcome to GTMyMusic!"
             android:id="@+id/textView" />
     </LinearLayout>
 </FrameLayout>
