--- a/AndroidClientProject/AndroidClient/src/main/res/layout/activity_main.xml
+++ b/AndroidClientProject/AndroidClient/src/main/res/layout/activity_main.xml
@@ -10,9 +10,10 @@
         android:layout_height="match_parent"
         android:orientation="horizontal" >
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Welcome to GTMyMusic!"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:textSize="20sp"
+            android:text="Welcome to GTMyMusic!\n"
             android:id="@+id/textView" />
     </LinearLayout>
 </FrameLayout>
