--- a/AndroidClientProject/AndroidClient/src/main/res/layout/activity_main.xml
+++ b/AndroidClientProject/AndroidClient/src/main/res/layout/activity_main.xml
@@ -6,14 +6,75 @@
     tools:context=".MainActivity"
     tools:ignore="MergeRootFrame">
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal" >
-        <TextView
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+        <ScrollView
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:textSize="20sp"
-            android:text="Welcome to GTMyMusic!\n"
-            android:id="@+id/textView" />
+            android:layout_height="0dip"
+            android:layout_weight="1"
+            >
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Welcome to GTMyMusic!\n"
+                    android:id="@+id/textView" />
+            </LinearLayout>
+        </ScrollView>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+            <Button
+                android:layout_height="fill_parent"
+                android:layout_width="0dip"
+                android:layout_weight="1"
+                android:text="LIST"
+                android:onClick="doList"
+                android:id="@+id/command_list" />
+            <Button
+                android:layout_height="fill_parent"
+                android:layout_width="0dip"
+                android:layout_weight="1"
+                android:text="DIFF"
+                android:onClick="doDiff"
+                android:id="@+id/command_diff" />
+            <Button
+                android:id="@+id/command_pull"
+                android:layout_height="fill_parent"
+                android:layout_width="0dip"
+                android:layout_weight="1"
+                android:onClick="doPull"
+                android:text="PULL" />
+            <Button
+                android:id="@+id/command_leave"
+                android:layout_height="fill_parent"
+                android:layout_width="0dip"
+                android:layout_weight="1"
+                android:onClick="doLeave"
+                android:text="LEAVE" />
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+            <EditText
+                android:layout_width="0dip"
+                android:layout_weight="1"
+                android:layout_height="fill_parent"
+                android:hint="Cap limit (in MB)"
+                android:inputType="number" />
+            <Button
+                android:id="@+id/command_cap"
+                android:layout_height="fill_parent"
+                android:layout_width="0dip"
+                android:layout_weight="1"
+                android:onClick="doCap"
+                android:text="CAP" />
+        </LinearLayout>
     </LinearLayout>
 </FrameLayout>
