--- a/AndroidClientProject/AndroidClient/src/main/res/layout/activity_main.xml
+++ b/AndroidClientProject/AndroidClient/src/main/res/layout/activity_main.xml
@@ -63,6 +63,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
             <EditText
+                android:id="@+id/cap_value"
                 android:layout_width="0dip"
                 android:layout_weight="1"
                 android:layout_height="fill_parent"
